--- a/css/legal.css
+++ b/css/legal.css
@@ -1,4 +1,3 @@
-/* מבוסס על mish.css – בלי צורך בייבוא */
 body {
   margin: 0;
   font-family: Arial, sans-serif;
@@ -35,7 +34,6 @@ h2 {
   margin-bottom: 30px;
 }
 
-/* עיצוב תיבות החוקים והטפסים */
 #rules-container, #forms-container {
   display: flex;
   flex-direction: column;
@@ -55,13 +53,32 @@ h2 {
   transform: scale(1.01);
 }
 
-.rule-item h3, .form-item h3 {
+.rule-toggle {
+  background: none;
+  border: none;
+  font-size: 1.1em;
+  font-weight: bold;
+  color: #8e44ad;
+  cursor: pointer;
+  text-align: right;
+  width: 100%;
+}
+
+.rule-item p {
+  margin-top: 10px;
+  color: #333;
+  font-size: 1em;
+  line-height: 1.6;
+  display: none;
+}
+
+.form-item h3 {
   color: #8e44ad;
   margin-bottom: 10px;
   font-size: 1.2em;
 }
 
-.rule-item p, .form-item p {
+.form-item p {
   color: #333;
   font-size: 1em;
   line-height: 1.6;
