--- a/css/inf.css
+++ b/css/inf.css
@@ -32,11 +32,10 @@ h1 {
 
 .category-list {
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  max-width: 900px;
-  margin: 0 auto 40px;
+  flex-wrap: wrap;
+  justify-content: center;
   gap: 12px;
+  margin-bottom: 30px;
 }
 
 .category-button {
@@ -90,6 +89,7 @@ h1 {
   font-size: 1.1em;
   color: #444;
 }
+
 /* תמונה ראשית */
 .main-image {
   width: 100%;
@@ -102,7 +102,7 @@ h1 {
 }
 
 /* גלריית תמונות נוספות */
-.extra-images {
+.extra-gallery {
   display: flex;
   flex-wrap: wrap;
   gap: 12px;
